--- a/package.json
+++ b/package.json
@@ -9,5 +9,15 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@inertiajs/vue3": "^1.0.7",
+        "@quasar/extras": "^1.16.4",
+        "@quasar/vite-plugin": "^1.3.3",
+        "@vitejs/plugin-vue": "^4.2.3",
+        "@vue/compiler-sfc": "^3.3.4",
+        "quasar": "^2.12.0",
+        "sass": "^1.32.12",
+        "vue": "^3.3.4"
     }
 }
