--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "@quasar/vite-plugin": "^1.3.3",
         "@vitejs/plugin-vue": "^4.2.3",
         "@vue/compiler-sfc": "^3.3.4",
+        "laravel-echo": "^1.15.1",
+        "pusher-js": "^8.0.2",
         "quasar": "^2.12.0",
         "sass": "^1.32.12",
         "vue": "^3.3.4"
